# sra

./: .gitignore  INSTALL.md  LICENSE.md  README.md  REQUIREMENTS.md  STATUS.md  requirements.txt
formatter/: CMakeLists.txt  README.md  build.sh
formatter/demo/: already_formatted.c  combined.c  complex_indent.c  comprehensive_test.cpp  control_flow.c  forloop.c  if.c  label_test.c  multiple_catch_test.cpp  nested_test.c  range_for_test.cpp  simple_range_for_test.cpp  switch_test.c  try_catch_test.cpp
formatter/src/: BreakLineTransform.cpp  BreakLineTransform.h  main.cpp
fuzzer/: Dockerfile  README.md  SETUP.md  setup_tools.sh
fuzzer/.devcontainer/: devcontainer.json
fuzzer/notebooks/: flow_reachability_visualization.ipynb
fuzzer/notes/: V001.md  V002.md  V003.md  V004.md  V005.md  V006.md  V007.md  V008.md
fuzzer/sense/: CHANGES-reachability-estimator.md  CMakeLists.txt  merge_compile_commands.sh
fuzzer/sense/demo/: demo_hash.c  demo_modulo.c  flow_getenv.c  flow_getenv.ll  flow_mdarray.c  flow_mdarray.ll  flow_scalars.c  flow_scalars.ll  flow_scalars.sarif  flow_simple.c  flow_simple.ll  flow_simple.sarif  flow_struct.c  flow_struct.ll
fuzzer/sense/dynamo/: CMakeLists.txt  README.md  TOOL.md  marker_common.c  marker_common.h  minimal_test.c  read_tracker.c  read_tracker.h  track_reads.c  track_reads_marker.c  track_rw_marker.c  track_writes_marker.c  write_tracker.c  write_tracker.h
fuzzer/sense/dynamo/tests/: profile_track_reads.sh  target.c  target_marker.c  target_marker_offset.c  target_marker_rw.c  target_marker_writes.c  target_persist.c  test_track_reads.sh  test_track_reads_marker.sh  test_track_rw_marker.sh  test_track_writes_marker.sh
fuzzer/sense/monitor/: README.md  __init__.py  analysis_db.py  config.py  event_processor.py  flow_db.py  flow_monitor.py  generate_cfg.py  monitor.py  reachability_estimator.py  shm_protocol.py
fuzzer/sense/monitor/configs/: default.yaml  development.yaml  production.yaml
fuzzer/sense/orchestrator/: ASTAnalyzer.cpp  ASTAnalyzer.h  FlowManager.cpp  FlowManager.h  InstrumentationStrategy.cpp  InstrumentationStrategy.h  README.md  SARIFParser.cpp  SARIFParser.h  ServiceComm.cpp  ServiceComm.h  main.cpp
fuzzer/sense/passes/: DataFlowCoveragePass.cpp  DemoUnderlyingObjectsPass.cpp  DummyIOPass.cpp  PassUtils.h  PointeeBaseRecovery.cpp  PointeeBaseRecovery.h  PointeeRecoveryPass.cpp  SampleArgsPass.cpp  SampleFlowSinkPass.cpp  SampleFlowSrcPass.cpp
fuzzer/sense/runtime/: df_coverage_runtime.c  df_coverage_runtime.h  flow_runtime.c  flow_runtime.h  flow_shm.h  mut_runtime.h  sample_runtime.c  sample_runtime.h
fuzzer/sense/sra/: cfggen.py  estimator.py  estimator_chunk.py  mapper.py  taintflow.py
fuzzer/sense/tests/: test_fuzz_mini_httpd.sh  test_fuzz_totinfo.sh  test_reachability_estimator.py  test_taint_sink_insert_sample_byte_array.sh  test_taint_sink_insert_sample_mdarray.sh  test_taint_sink_insert_sample_scalar.sh  test_taint_sink_insert_sample_struct.sh  test_taint_src_insert_sample_byte_array.sh  test_taint_src_insert_sample_getenv.sh  test_taint_src_insert_sample_mdarray.sh  test_taint_src_insert_sample_scalar.sh  test_taint_src_insert_sample_struct.sh  test_totinfo_fuzz.sh
fuzzer/subjects/siemens-suite/: BUILD.sh  build-analyze.sh  build-codeql-db.sh  totinfo_fuzz_example.sh
notes/: sense_sampling.ipynb
rq1/laplace/: RQ1-Laplace.ipynb
rq1/laplace/algorithms-modified/: InsertionSort-FunSat02-result  InsertionSort-FunSat02-result-0.01-0  InsertionSort-FunSat02-result-0.01-1  InsertionSort-FunSat02-result-0.01-2  InsertionSort-FunSat02-result-0.01-3  InsertionSort-FunSat02-result-0.01-4  InsertionSort-FunSat02-result-0.01-5  InsertionSort-FunSat02-result-0.01-6  InsertionSort-FunSat02-result-0.01-7  InsertionSort-FunSat02-result-0.01-8  InsertionSort-FunSat02-result-0.01-9  InsertionSort-FunSat02.c  InsertionSort-FunSat02.out  RedBlackTree-FunSat01-result-0.01-0  RedBlackTree-FunSat01-result-0.01-1  RedBlackTree-FunSat01-result-0.01-2  RedBlackTree-FunSat01-result-0.01-3  RedBlackTree-FunSat01-result-0.01-4  RedBlackTree-FunSat01-result-0.01-5  RedBlackTree-FunSat01-result-0.01-6  RedBlackTree-FunSat01-result-0.01-7  RedBlackTree-FunSat01-result-0.01-8  RedBlackTree-FunSat01-result-0.01-9  RedBlackTree-FunSat01.c  RedBlackTree-FunSat01.out
rq1/laplace/jbmc-regression-modified/: TokenTest02-result-0.01-0  TokenTest02-result-0.01-1  TokenTest02-result-0.01-2  TokenTest02-result-0.01-3  TokenTest02-result-0.01-4  TokenTest02-result-0.01-5  TokenTest02-result-0.01-6  TokenTest02-result-0.01-7  TokenTest02-result-0.01-9  TokenTest02.c  TokenTest02.out  assert3-result  assert3-result-0.01-6  (+11 more)
rq2/: RQ2-estimate.ipynb  RQ2-timespent.ipynb
rq2/esti-result/: README.md
rq2/fuzz-data/: README.md
rq2/fuzz-data/ft_data/source_code/gif2png/: Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.in  control  djgpp.txt  gif2png.c  gif2png.ll  gif2png.xml  specgen.sh  web2png
rq2/fuzz-data/ft_data/source_code/gif2png/autom4te.cache/: output.0  output.2  output.3  requests  traces.0  traces.1  traces.3
rq2/fuzz-data/ft_data/source_code/gif2png/test/: 666666.png-check  GTCD  GTCD-CHECK  README  gtcd.png-check  links2.js  links2.js-gif  notfunny.png-check  style.css  style.css-gif  test.html  test.html-gif
rq2/scripts/: hard-to-reach-node.ipynb  hard-to-reach-node2.ipynb  inspect-crash-data.ipynb  new-freetype2-analysis.ipynb  new-gif2png-analysis.ipynb  new-jasper-analysis.ipynb  new-jsoncpp-analysis.ipynb  new-printtokens2-analysis.ipynb  new-readelf-analysis.ipynb  new-replace-analysis.ipynb  new-schedule2-analysis.ipynb  new-tcas-analysis.ipynb  new-totinfo-analysis.ipynb
rq2/sra/: cfggen.py  dataloader.py  dataprocessor.py  estimator.py  estimator_chunk.py  estimator_cum.py  mapper.py  mestimator.py
sense/: CMakeLists.txt
sense/demo/: demo.c  demo_constant.c  demo_linear.c  demo_parity.c  demo_sign.c
sense/passes/: MutArgsPass.cpp  SampleArgsPass.cpp
sense/runtime/: mut_runtime.c  sample_runtime.c  sample_runtime.h
taint/notebook/: totinfo-path-reach-analysis.ipynb
(+483 files in other folders)
